--- a/plugin.xml
+++ b/plugin.xml
@@ -56,6 +56,7 @@
         </config-file>
         <source-file src="src/android/libs/odnoklassniki-android-sdk.jar" target-dir="libs/" />
         <source-file src="src/android/SocialOk.java" target-dir="src/ru/trilan/socialok/" />
+        <source-file src="src/android/JsonHelper.java" target-dir="src/ru/trilan/socialok/" />
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
           <activity
