add newtonsoft json library

--- a/plugin.xml
+++ b/plugin.xml
@@ -96,5 +96,6 @@
       <source-file src="src/wp/Odnoklassniki.ServiceStructures.cs"/>
       <source-file src="src/wp/Odnoklassniki.cs"/>
       <source-file src="src/wp/SocialOk.cs"/>
+      <framework src="src/wp/Newtonsoft.Json.dll" custom="true" />
     </platform>
 </plugin>
