--- a/src/android/odnoklassniki-android-sdk/build-extras.gradle
+++ b/src/android/odnoklassniki-android-sdk/build-extras.gradle
@@ -6,4 +6,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    packagingOptions {
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
