--- a/src/android/odnoklassniki-android-sdk/build-extras.gradle
+++ b/src/android/odnoklassniki-android-sdk/build-extras.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.android.support:support-annotations:23.1.1'
 }
 
 android {
